@@ -3,6 +3,8 @@ chronological order:
 
 V 0.9:
 
+* fixed the 1-target case in type-3, all dims, to avoid nan. 6/12/17
+* changed arraywidcen to snap to C=0 if relative shift is <0.1, avoids cexps in type-3.
 * removed the 1/M type-1 prefactor, also in all test routines. 6/6/17
 * removed timestamp-based make decision whether to rebuild matlab/finufft.cpp, since git clone creates files with random timestamp order!
 * theory work on exp(sqrt) being close to PSWF. Analysis.
